// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"type T1 = B | A;
          ~~~~~ Union type T1 constituents must be sorted.

type T2 = { b: string } & { a: string };
          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Intersection type T2 constituents must be sorted.

type T3 = [1, 2, 4] & [1, 2, 3];
          ~~~~~~~~~~~~~~~~~~~~~ Intersection type T3 constituents must be sorted.

type T4 =
  | [1, 2, 4]
  ~~~~~ Union type T4 constituents must be sorted.
  | [1, 2, 3]
~~~~~~~~~~~
  | { b: string }
~~~~~~~~~~~~~~~
  | { a: string }
~~~~~~~~~~~~~~~
  | (() => void)
~~~~~~~~~~~~~~
  | (() => string)
~~~~~~~~~~~~~~~~
  | 'b'
~~~~~
  | 'a'
~~~~~
  | 'b'
~~~~~
  | 'a'
~~~~~
  | readonly string[]
~~~~~~~~~~~~~~~~~~~
  | readonly number[]
~~~~~~~~~~~~~~~~~~~
  | string[]
~~~~~~~~~~
  | number[]
~~~~~~~~~~
  | B
~~~
  | A
~~~
  | string
~~~~~~~~
  | any;
~~~~~~
"
`;

exports[` 2`] = `
"type T1 = A | B;

type T2 = { a: string } & { b: string };

type T3 = [1, 2, 3] & [1, 2, 4];

type T4 =
  | A
  | B
  | number[]
  | string[]
  | any
  | string
  | readonly number[]
  | readonly string[]
  | 'a'
  | 'a'
  | 'b'
  | 'b'
  | (() => string)
  | (() => void)
  | { a: string }
  | { b: string }
  | [1, 2, 3]
  | [1, 2, 4];
"
`;

exports[` 3`] = `
"type ExampleIntersection = B & A;
                           ~~~~~ Intersection type ExampleIntersection constituents must be sorted.
"
`;

exports[` 4`] = `
"type ExampleIntersection = A & B;
"
`;

exports[` 5`] = `
"type ExampleUnion = B | A;
                    ~~~~~ Union type ExampleUnion constituents must be sorted.
"
`;

exports[` 6`] = `
"type ExampleUnion = A | B;
"
`;

exports[` 7`] = `
"type ExampleGroup = null | 123;
                    ~~~~~~~~~~ Union type ExampleGroup constituents must be sorted.
"
`;

exports[` 8`] = `
"type ExampleGroup = 123 | null;
"
`;
